auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d9268219",
+   "id": "577ce292",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2dbaa9e",
+   "id": "8e474074",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45eb00f0",
+   "id": "3dc4e8ad",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ee7b717",
+   "id": "72aab15e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dbfa756",
+   "id": "9106981d",
    "metadata": {
     "hide-output": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df69322c",
+   "id": "3bf23969",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8adeabb",
+   "id": "58da7a8b",
    "metadata": {
     "hide-output": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "695c4aaa",
+   "id": "fa12c84f",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a55a63d",
+   "id": "3770bd8c",
    "metadata": {
     "hide-output": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53febde7",
+   "id": "4982ecc4",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb0c9da",
+   "id": "67b3113b",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b32713d8",
+   "id": "a6bb31bb",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5de65ac2",
+   "id": "122b3b10",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a60505c4",
+   "id": "10ed9b1e",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53edf27d",
+   "id": "eb2c033d",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52eb3bc9",
+   "id": "26629a2c",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71e59c40",
+   "id": "330ec6ac",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "467e940f",
+   "id": "8efc547f",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0163fb80",
+   "id": "5b4f2292",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee3285d6",
+   "id": "fd494697",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2c46a0f",
+   "id": "9566be7e",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ad4b6d5",
+   "id": "7249d3fb",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0b40328",
+   "id": "ba01dd9a",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "798d119c",
+   "id": "46bbe5ea",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eb5d762",
+   "id": "104da4b1",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87554f0a",
+   "id": "9c555afe",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca57b84d",
+   "id": "3f9dc0e4",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73e72f35",
+   "id": "cab09c73",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48235859",
+   "id": "226a5e4b",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the arrays declared as static (compile-time constants) in order to help the compiler."
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56ed2b27",
+   "id": "4101be04",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15102ab3",
+   "id": "c99e9cc0",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecfaf387",
+   "id": "8fe3c6a0",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aea7ae27",
+   "id": "a1439589",
    "metadata": {},
    "source": [
     "We can now write a function that will use the `Arellano_Economy` class and the\n",
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e38310a7",
+   "id": "1e05f82c",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "407c6ee0",
+   "id": "44af391c",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3737be8",
+   "id": "1e8546c2",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bb6a6f8",
+   "id": "f613bf04",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbe9635d",
+   "id": "65755dbd",
    "metadata": {
     "hide-output": false
    },
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0885fcd",
+   "id": "229920e4",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90dac70e",
+   "id": "b5c58d7f",
    "metadata": {
     "hide-output": false
    },
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81c66827",
+   "id": "41ab77d6",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cd181cd",
+   "id": "9da9cb34",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7399a2b3",
+   "id": "9ec52f17",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b32a09d7",
+   "id": "12985560",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61fee613",
+   "id": "da17cd61",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56aa530f",
+   "id": "c6dc4d34",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of Arellano (2008)"
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "775aa840",
+   "id": "e219fcd4",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "178556b8",
+   "id": "6a533749",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ace514e",
+   "id": "5f3e85e7",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d737f93",
+   "id": "371d30fa",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e4843f0",
+   "id": "ffdb8afd",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eded5d4",
+   "id": "76229641",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed9ea74e",
+   "id": "e30aa220",
    "metadata": {
     "hide-output": false
    },
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7bdf7bb",
+   "id": "a4683fad",
    "metadata": {
     "hide-output": false
    },
@@ -1240,7 +1240,7 @@
   }
  ],
  "metadata": {
-  "date": 1695354741.062698,
+  "date": 1697074770.5330987,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
