--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c3147a26",
+   "id": "638c235a",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8fa5ce6",
+   "id": "1cfccaa0",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14bf5947",
+   "id": "08c5fed8",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa0936da",
+   "id": "3b8a282a",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9485746c",
+   "id": "bafb9561",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbcf9708",
+   "id": "04e53b88",
    "metadata": {
     "hide-output": false
    },
@@ -85,12 +85,13 @@
     "import quantecon as qe\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "from jax import random"
+    "from jax import random\n",
+    "from jax import lax"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "01fae55f",
+   "id": "16838741",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -99,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a201285b",
+   "id": "8117a850",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8c26f58",
+   "id": "f36c10a6",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40aab32a",
+   "id": "ab1f0c20",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96cd2da8",
+   "id": "a6a143df",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84bec497",
+   "id": "53402255",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -249,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb9f68f5",
+   "id": "1f392d45",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f20da52b",
+   "id": "b2c15041",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -283,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e01397",
+   "id": "10182a46",
    "metadata": {
     "hide-output": false
    },
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6afb1051",
+   "id": "2a8868a2",
    "metadata": {},
    "source": [
     "Running the above function again so we can see the speed with and without compile time."
@@ -334,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10263455",
+   "id": "4f21251a",
    "metadata": {
     "hide-output": false
    },
@@ -345,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83a6287",
+   "id": "a8ffd0e0",
    "metadata": {},
    "source": [
     "Notice that we do not JIT-compile the `for` loops, since\n",
@@ -361,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47396792",
+   "id": "647f3be4",
    "metadata": {
     "hide-output": false
    },
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbc27e3e",
+   "id": "e2f5e8c0",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -387,39 +388,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72fb6cab",
+   "id": "acbb99f7",
    "metadata": {},
    "source": [
-    "#### Alternative implementation with `lax.scan`\n",
+    "#### Alternative implementation with `lax.fori_loop`\n",
     "\n",
     "If the time horizon is not too large, we can try to further accelerate our code\n",
     "by replacing the `for` loop with\n",
-    "[`lax.scan`](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.scan.html).\n",
+    "[`lax.fori_loop`](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.fori_loop.html).\n",
     "\n",
     "Note, however, that\n",
     "\n",
     "1. as mentioned above, there is not much speed gain in accelerating outer loops,  \n",
-    "1. `lax.scan` has a more complicated syntax, and, most importantly,  \n",
-    "1. the `lax.scan` implementation consumes far more memory, as we need to have to\n",
+    "1. `lax.fori_loop` has a more complicated syntax, and, most importantly,  \n",
+    "1. the `lax.fori_loop` implementation consumes far more memory, as we need to have to\n",
     "  store large matrices of random draws  \n",
     "\n",
     "\n",
     "Hence the code below will fail due to out-of-memory errors when `T` and `M` are large.\n",
     "\n",
-    "Here is the `lax.scan` version:"
+    "Here is the `lax.fori_loop` version:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91a93446",
+   "id": "f064fdaa",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "from jax import lax\n",
-    "\n",
     "@jax.jit\n",
     "def generate_draws_lax(μ_a=-0.5,\n",
     "                       σ_a=0.1,\n",
@@ -443,15 +442,15 @@
     "    s = jnp.full((M, ), s_init)\n",
     "\n",
     "    # Define the function for each update\n",
-    "    def update_s(s, a_b_e_draws):\n",
-    "        a, b, e = a_b_e_draws\n",
+    "    def update_s(i, s):\n",
+    "        a, b, e = a_random[i], b_random[i], e_random[i]\n",
     "        s = jnp.where(s < s_bar,\n",
     "                      jnp.exp(e),\n",
     "                      jnp.exp(a) * s + jnp.exp(b))\n",
-    "        return s, None\n",
+    "        return s\n",
     "\n",
     "    # Use lax.scan to perform the calculations on all states\n",
-    "    s_final, _ = lax.scan(update_s, s, (a_random, b_random, e_random))\n",
+    "    s_final = lax.fori_loop(0, T, update_s, s)\n",
     "    return s_final\n",
     "\n",
     "%time data = generate_draws_lax().block_until_ready()"
@@ -459,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddd085d",
+   "id": "79302909",
    "metadata": {},
    "source": [
     "In this case, `M` is small enough for the code to run and\n",
@@ -469,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7986658f",
+   "id": "b1222330",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "169f7d4a",
+   "id": "ef1228c3",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -489,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "241d76e7",
+   "id": "11fd754f",
    "metadata": {
     "hide-output": false
    },
@@ -507,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fba891d",
+   "id": "29cbd464",
    "metadata": {},
    "source": [
     "Let’s rerun the `for` loop version on smaller `M` to compare the speed"
@@ -516,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2da980a",
+   "id": "bd18d6ad",
    "metadata": {
     "hide-output": false
    },
@@ -527,16 +526,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f103074c",
+   "id": "294cef63",
    "metadata": {},
    "source": [
-    "We see that the `lax.scan` version is faster than the `for` loop version\n",
+    "We see that the `lax.fori_loop` version is faster than the `for` loop version\n",
     "when memory is not an issue."
    ]
   }
  ],
  "metadata": {
-  "date": 1695354741.4219606,
+  "date": 1697074770.7633395,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
