--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a053c94",
+   "id": "4825615e",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd0e8f8",
+   "id": "fac55e43",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9cd189e",
+   "id": "1f85509d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09d35058",
+   "id": "062a8f17",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddfbdfc3",
+   "id": "e3c10285",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44851bd5",
+   "id": "728446f2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d8d47bb",
+   "id": "55e1efd3",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71f6de64",
+   "id": "7c79a691",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10b2261f",
+   "id": "d760628d",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9106829b",
+   "id": "68e8d6a8",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75348b01",
+   "id": "423c3d16",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00204b1c",
+   "id": "e28714fb",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470fb6e6",
+   "id": "1aa03baa",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0280d6f4",
+   "id": "d79946e0",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44c5c431",
+   "id": "4d2ac5f1",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eb7831d",
+   "id": "56f0beba",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be657c8f",
+   "id": "52757e39",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de1ec449",
+   "id": "4263d0d5",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e23ef23",
+   "id": "6d30ce69",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a36b6381",
+   "id": "3ecc6967",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d7855cc",
+   "id": "7d469fb6",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "905071c9",
+   "id": "0fd57d8b",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6888a961",
+   "id": "10e75ebc",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcf80a6c",
+   "id": "5f55e4a5",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "177dba8a",
+   "id": "6b7d0aea",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64fee1ef",
+   "id": "1c261274",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43532c32",
+   "id": "e2804ed4",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2029751c",
+   "id": "dcc7f918",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "381521a2",
+   "id": "1894bdc0",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91245f87",
+   "id": "e54630ea",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47baf90a",
+   "id": "c12a4203",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c180efd2",
+   "id": "99eb9b42",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31394f4d",
+   "id": "073eaa8d",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da591eea",
+   "id": "04d29f36",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8ad7d7f",
+   "id": "9a493418",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f92c5ff",
+   "id": "8606207e",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0157ea1e",
+   "id": "608d66c1",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6de142a4",
+   "id": "c9c00f72",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -872,7 +872,7 @@
   }
  ],
  "metadata": {
-  "date": 1695354741.1448185,
+  "date": 1697074770.606771,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
