--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "86bb0a14",
+   "id": "7281bb29",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32a42d88",
+   "id": "c5c7cfd6",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83ff4f83",
+   "id": "b99ebf7b",
    "metadata": {
     "hide-output": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72d3718d",
+   "id": "b0a55a03",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01866947",
+   "id": "853d7e29",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af4f1f60",
+   "id": "47b0d59b",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e1979f",
+   "id": "5d6f51d8",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72f87f2d",
+   "id": "ce7f5a08",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39bcfe9f",
+   "id": "1fe1755c",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844094ee",
+   "id": "aebaca3f",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c372332",
+   "id": "c8d98455",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1438d3b",
+   "id": "e0018182",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dfac1ec",
+   "id": "766308e2",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56c68f47",
+   "id": "b812c5e2",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "372e38d0",
+   "id": "474f6da6",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89f26b27",
+   "id": "a645fe95",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68d7391e",
+   "id": "7bf7a4d1",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "196a213e",
+   "id": "0aa7e848",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1c2c1e8",
+   "id": "506782e2",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "456583fe",
+   "id": "a60bb3be",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(4.15)](#equation-eq-ntecxdk).\n",
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa2debf",
+   "id": "296a2152",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5106e73b",
+   "id": "97ad291c",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df540b3e",
+   "id": "a2e24b3f",
    "metadata": {
     "hide-output": false
    },
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9fc4ea3",
+   "id": "ab5d4946",
    "metadata": {},
    "source": [
     "These two functions produce the saem output:"
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db680eb0",
+   "id": "98e19bb1",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaa68a48",
+   "id": "e2b9b6f8",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4591a994",
+   "id": "e4e3dfc4",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d49e422",
+   "id": "f24fc722",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c155fc7",
+   "id": "f4a62eae",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18196947",
+   "id": "527b3d55",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "178bc9d5",
+   "id": "c4ac900b",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eb10832",
+   "id": "e38b36a0",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -898,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faeffe3d",
+   "id": "42b458e2",
    "metadata": {
     "hide-output": false
    },
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d797beab",
+   "id": "d6f2f2b4",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94e704ca",
+   "id": "087f9db3",
    "metadata": {
     "hide-output": false
    },
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69739bb8",
+   "id": "caa42fb3",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc509efb",
+   "id": "a6e7f41c",
    "metadata": {
     "hide-output": false
    },
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfb84c5d",
+   "id": "a2b3ee27",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70c7684e",
+   "id": "8298e8d9",
    "metadata": {
     "hide-output": false
    },
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7250383",
+   "id": "15d5e662",
    "metadata": {
     "hide-output": false
    },
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c5601f8",
+   "id": "141ccf6e",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b13b62c",
+   "id": "bd09e261",
    "metadata": {
     "hide-output": false
    },
@@ -1094,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02aa0b8d",
+   "id": "77d26f97",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb7ebe14",
+   "id": "01624b9f",
    "metadata": {
     "hide-output": false
    },
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e653615",
+   "id": "a6c7a39e",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcb023ee",
+   "id": "9f5636ab",
    "metadata": {
     "hide-output": false
    },
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f6f648",
+   "id": "d971c9b9",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1177,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8866c38",
+   "id": "eacbf5e7",
    "metadata": {
     "hide-output": false
    },
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc35f9f5",
+   "id": "78d21c22",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1215,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f828ba5",
+   "id": "8651b53f",
    "metadata": {
     "hide-output": false
    },
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bec102fb",
+   "id": "463363de",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b7695fb",
+   "id": "c3aecf73",
    "metadata": {
     "hide-output": false
    },
@@ -1276,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04f57dcf",
+   "id": "c0fb1bf8",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4891e6d8",
+   "id": "1806d08a",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17104695",
+   "id": "a95ecd75",
    "metadata": {
     "hide-output": false
    },
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "202a0f04",
+   "id": "0ebf3192",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bf1e554",
+   "id": "e6625d1b",
    "metadata": {
     "hide-output": false
    },
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b04113e",
+   "id": "017782c4",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1343,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "569ea292",
+   "id": "935c1f51",
    "metadata": {
     "hide-output": false
    },
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f549a63c",
+   "id": "aa85eb94",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f5ef906",
+   "id": "f39313e1",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42e063a5",
+   "id": "9a6cfd9c",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1393,7 +1393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14d943e6",
+   "id": "cf70ad9c",
    "metadata": {
     "hide-output": false
    },
@@ -1410,6 +1410,7 @@
     "    P = np.reshape(P,            (I, 1, 1, I,  1,  1))\n",
     "    Q = np.reshape(Q,            (1, J, 1, 1,  J,  1))\n",
     "    R = np.reshape(R,            (1, 1, K, 1,  1,  K))\n",
+    "    g = np.reshape(g,            (1, 1, 1, I,  J,  K))\n",
     "    a = μ_d - γ * μ_c\n",
     "    b = bar_σ**2 * (jnp.exp(2 * hd) + γ**2 * jnp.exp(2 * hc)) / 2\n",
     "    κ = jnp.exp(a + (1 - γ) * z + b)\n",
@@ -1420,7 +1421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "947cace3",
+   "id": "a421af00",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1430,7 +1431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07ed7cce",
+   "id": "038b5d4a",
    "metadata": {
     "hide-output": false
    },
@@ -1454,7 +1455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d15fc548",
+   "id": "c80ca3db",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1463,7 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d2a3e17",
+   "id": "d3888733",
    "metadata": {
     "hide-output": false
    },
@@ -1475,7 +1476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec22676e",
+   "id": "1242118f",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1484,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70121369",
+   "id": "b823219a",
    "metadata": {
     "hide-output": false
    },
@@ -1497,7 +1498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d68e08d",
+   "id": "e1205a9a",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1506,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bf727ac",
+   "id": "77d927fc",
    "metadata": {
     "hide-output": false
    },
@@ -1519,7 +1520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b06bfe1f",
+   "id": "6a338562",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1528,7 +1529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1d3eb31",
+   "id": "0aa28550",
    "metadata": {
     "hide-output": false
    },
@@ -1539,7 +1540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7f5b9da",
+   "id": "d0cc92ad",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1548,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55127d76",
+   "id": "e0cb4624",
    "metadata": {
     "hide-output": false
    },
@@ -1559,7 +1560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66ccc1f4",
+   "id": "f0a78d01",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1570,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75f19e52",
+   "id": "5e7a1fc4",
    "metadata": {
     "hide-output": false
    },
@@ -1588,7 +1589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92da5287",
+   "id": "ccd3c279",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1599,7 +1600,7 @@
   }
  ],
  "metadata": {
-  "date": 1695354741.5028975,
+  "date": 1697074770.833053,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
