--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ca084dd6",
+   "id": "c2522540",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
     "\n",
     "This website presents a set of lectures on quantitative economic modeling\n",
-    "using GPUs and [Google JAX](https://jax.readthedocs.io).   The lectures\n",
-    "are designed and written by [Thomas J. Sargent](http://www.tomsargent.com/) and\n",
-    "[John Stachurski](https://johnstachurski.net/)."
+    "using GPUs and [Google JAX](https://jax.readthedocs.io)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d87064a2",
+   "id": "169b5a81",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -28,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e0d5885",
+   "id": "f8194ac6",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b75a58c2",
+   "id": "391bb820",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad035357",
+   "id": "a5b25b0f",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -66,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e151e46",
+   "id": "d525f632",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -78,7 +76,7 @@
   }
  ],
  "metadata": {
-  "date": 1697074770.6241193,
+  "date": 1703121772.4939086,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
