--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b76be18e",
+   "id": "b0862b7b",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7b35b85",
+   "id": "f5ae4190",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1be47e8",
+   "id": "d944acc9",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ad3b67b",
+   "id": "ab8cd829",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14160429",
+   "id": "726ef1b7",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8606634d",
+   "id": "1f208d69",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2e9cc58",
+   "id": "eaf3f946",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4515f2a3",
+   "id": "c4cc8e5f",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edc35b62",
+   "id": "32d322d2",
    "metadata": {
     "hide-output": false
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5810c03d",
+   "id": "9e488c57",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbab4ed1",
+   "id": "5a1b11f8",
    "metadata": {
     "hide-output": false
    },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50d2e5e9",
+   "id": "4f120296",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e1cdbf5",
+   "id": "8820c8b3",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87c7054f",
+   "id": "f4683224",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae887671",
+   "id": "1bda7642",
    "metadata": {
     "hide-output": false
    },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1f87835",
+   "id": "66209989",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a0e7a59",
+   "id": "3524bdeb",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df9778bc",
+   "id": "a7331856",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a7dca46",
+   "id": "37611ca3",
    "metadata": {
     "hide-output": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a4d3e30",
+   "id": "365a64e5",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e81a8c11",
+   "id": "5dbc98b7",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f2e9bc",
+   "id": "9ede564a",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82e0ea99",
+   "id": "a9258ec9",
    "metadata": {
     "hide-output": false
    },
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1b06eb9",
+   "id": "15615886",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2c83354",
+   "id": "55d4847e",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da63254f",
+   "id": "3a7bac4f",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3fa30f3",
+   "id": "0d479088",
    "metadata": {
     "hide-output": false
    },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3b90ba4",
+   "id": "db1df99d",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "455b7f2a",
+   "id": "873512c7",
    "metadata": {
     "hide-output": false
    },
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8618de7",
+   "id": "14f15119",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ce9fabe",
+   "id": "460169e1",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c1cee87",
+   "id": "9585d54c",
    "metadata": {
     "hide-output": false
    },
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ab2efc",
+   "id": "228602fa",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21c8be8c",
+   "id": "68ccb08b",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0d1f6e0",
+   "id": "175ea9a5",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc42e6ca",
+   "id": "eca05bd5",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98e5689b",
+   "id": "f9757fcf",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a554f1f",
+   "id": "c48e8302",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3377423f",
+   "id": "bc6eeafa",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9925e29",
+   "id": "91888e27",
    "metadata": {
     "hide-output": false
    },
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07f37eab",
+   "id": "2c2fab6b",
    "metadata": {
     "hide-output": false
    },
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "020754da",
+   "id": "782ac016",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32c7510b",
+   "id": "c9ce1acd",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   }
  ],
  "metadata": {
-  "date": 1697074771.0895672,
+  "date": 1703121772.886431,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
