--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5aa9302d",
+   "id": "6511f1ef",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b82e6c87",
+   "id": "c22e92c6",
    "metadata": {},
    "source": [
     "# Troubleshooting"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "379a1ea1",
+   "id": "44bb7626",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9389302a",
+   "id": "b198b7e6",
    "metadata": {},
    "source": [
     "This page is for readers experiencing errors when running the code from the lectures."
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "111048ae",
+   "id": "0e5c5d30",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "005b2471",
+   "id": "2524eac1",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -98,7 +98,7 @@
   }
  ],
  "metadata": {
-  "date": 1697074771.1758983,
+  "date": 1703121772.964494,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
