--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7281bb29",
+   "id": "0e961d91",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5c7cfd6",
+   "id": "7e6c059a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b99ebf7b",
+   "id": "e58d824d",
    "metadata": {
     "hide-output": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0a55a03",
+   "id": "af1e31cc",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "853d7e29",
+   "id": "2bd6693a",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47b0d59b",
+   "id": "b1b4c4f1",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d6f51d8",
+   "id": "451259b9",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce7f5a08",
+   "id": "18521e63",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fe1755c",
+   "id": "2bdcd762",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aebaca3f",
+   "id": "56b52761",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d98455",
+   "id": "f953a8a1",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0018182",
+   "id": "75963abc",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "766308e2",
+   "id": "38bc6062",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b812c5e2",
+   "id": "2f8a3e8e",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "474f6da6",
+   "id": "43e2d2bb",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a645fe95",
+   "id": "1cda4415",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bf7a4d1",
+   "id": "a97994ae",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aa7e848",
+   "id": "0bff4cde",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "506782e2",
+   "id": "c92e7b45",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a60bb3be",
+   "id": "84a06e04",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(4.15)](#equation-eq-ntecxdk).\n",
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "296a2152",
+   "id": "74c7cf9e",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97ad291c",
+   "id": "0f38ab19",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2e24b3f",
+   "id": "b3b31d59",
    "metadata": {
     "hide-output": false
    },
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab5d4946",
+   "id": "e4fd2ef8",
    "metadata": {},
    "source": [
     "These two functions produce the saem output:"
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98e19bb1",
+   "id": "298ed0ca",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2b9b6f8",
+   "id": "8de628a0",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4e3dfc4",
+   "id": "762bcc89",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f24fc722",
+   "id": "b57ce4be",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4a62eae",
+   "id": "9abb6b28",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "527b3d55",
+   "id": "c4a5e883",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4ac900b",
+   "id": "f538f13e",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e38b36a0",
+   "id": "53f795cf",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -898,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42b458e2",
+   "id": "6fdfd363",
    "metadata": {
     "hide-output": false
    },
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f2f2b4",
+   "id": "1f88072b",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "087f9db3",
+   "id": "21a93dbc",
    "metadata": {
     "hide-output": false
    },
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa42fb3",
+   "id": "b318a3f2",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e7f41c",
+   "id": "779c5550",
    "metadata": {
     "hide-output": false
    },
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2b3ee27",
+   "id": "2a0c7426",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8298e8d9",
+   "id": "53fd0a4c",
    "metadata": {
     "hide-output": false
    },
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15d5e662",
+   "id": "a006f846",
    "metadata": {
     "hide-output": false
    },
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "141ccf6e",
+   "id": "1c3abb40",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd09e261",
+   "id": "688784d9",
    "metadata": {
     "hide-output": false
    },
@@ -1094,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77d26f97",
+   "id": "b1f53d39",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01624b9f",
+   "id": "5ca05b1d",
    "metadata": {
     "hide-output": false
    },
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c7a39e",
+   "id": "5e1fbc35",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f5636ab",
+   "id": "0ebaa75e",
    "metadata": {
     "hide-output": false
    },
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d971c9b9",
+   "id": "86c349ee",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1177,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eacbf5e7",
+   "id": "55fca705",
    "metadata": {
     "hide-output": false
    },
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d21c22",
+   "id": "ebcc09d4",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1215,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8651b53f",
+   "id": "62a4ee58",
    "metadata": {
     "hide-output": false
    },
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "463363de",
+   "id": "22ebcf55",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3aecf73",
+   "id": "3e019b3d",
    "metadata": {
     "hide-output": false
    },
@@ -1276,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0fb1bf8",
+   "id": "f51e4606",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1806d08a",
+   "id": "b1e05214",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a95ecd75",
+   "id": "3c5563ee",
    "metadata": {
     "hide-output": false
    },
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ebf3192",
+   "id": "453bc47f",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6625d1b",
+   "id": "22e34a70",
    "metadata": {
     "hide-output": false
    },
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "017782c4",
+   "id": "b2100488",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1343,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "935c1f51",
+   "id": "98f4e16b",
    "metadata": {
     "hide-output": false
    },
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa85eb94",
+   "id": "10d31234",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f39313e1",
+   "id": "87a6ad6b",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a6cfd9c",
+   "id": "a1b0fd5b",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1393,7 +1393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf70ad9c",
+   "id": "662e3023",
    "metadata": {
     "hide-output": false
    },
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a421af00",
+   "id": "115f274f",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1431,7 +1431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "038b5d4a",
+   "id": "c1993459",
    "metadata": {
     "hide-output": false
    },
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c80ca3db",
+   "id": "41007188",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1464,7 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3888733",
+   "id": "74e941ea",
    "metadata": {
     "hide-output": false
    },
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1242118f",
+   "id": "710b74cd",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1485,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b823219a",
+   "id": "84d687d2",
    "metadata": {
     "hide-output": false
    },
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1205a9a",
+   "id": "1e0d894d",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1507,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77d927fc",
+   "id": "ec210537",
    "metadata": {
     "hide-output": false
    },
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a338562",
+   "id": "4d49d825",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1529,7 +1529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aa28550",
+   "id": "0ee92824",
    "metadata": {
     "hide-output": false
    },
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0cc92ad",
+   "id": "e4d9b2e0",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1549,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0cb4624",
+   "id": "f174c8a9",
    "metadata": {
     "hide-output": false
    },
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0a78d01",
+   "id": "b36e2156",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e7a1fc4",
+   "id": "6f5b432a",
    "metadata": {
     "hide-output": false
    },
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd3c279",
+   "id": "6862d045",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1600,7 +1600,7 @@
   }
  ],
  "metadata": {
-  "date": 1697074770.833053,
+  "date": 1703121772.6888103,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
